add more configs